fix: use GraalVM native binaries for google-java-format
- Update the formatting tasks to use native binaries rather than the
  all-deps jar to avoid issues with usage of JDK APIs that aren't
  included in every JDK distribution.